--- a/index.css
+++ b/index.css
@@ -86,7 +86,7 @@ nav ul li a {
 }
 
 .col-2 img {
-    width: 500px;
+    width: 100%;
     height: 400px;
     margin-right: 30px;
 }
@@ -222,6 +222,11 @@ nav ul li a {
     line-height: 50px;
 }
 
+.footer2 { 
+    background: black;
+}
+
+
     @media only screen and (max-width: 600px) {
          
         .navbar {
@@ -274,7 +279,7 @@ nav ul li a {
         }
 
         .col-2 img {
-            width: 190px;
+            width: 100%;
             height: 190px;
             margin-bottom: 30px;
         }
