--- a/index.css
+++ b/index.css
@@ -1,365 +1,308 @@
-
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     box-sizing: border-box;
-}
-
-body {
-    background-color: rgb(26, 25, 25);
-    color: white;
-}
-.all-body {
-    margin-left: 10px;
-    margin-right: 10px;
+    color: rgb(8, 8, 8);
+    background: rgb(255, 255, 255);
 }
 
 a {
     text-decoration: none;
-    color: white;
-}
-
-.header {
-    width: 100%;
-    height: 100vh;
-}
-
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.fas {
-    width: 30px;
-    display: none;
-    border-radius: 50%;
-}
-
-.logo {
-    width: 140px;
-    color: white;
-    text-decoration: none;
-    font-size: 25px;
-}
-
-span {
-    color: rgb(38, 235, 218);
+    color: rgb(3, 3, 3);
 }
 
 nav ul li {
-    display: inline-flex;
-    list-style: none;
+    display: inline;
+    justify-content: space-between;
     margin: 10px 20px;
 }
 
 nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-size: 15px;
+    color: black;
+    font-size: 18px;
+    font-weight: bold;
 }
 
-.header-text {
-    margin-top: 200px;
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
-.header-text h1 {
-    font-size: 50px;
+.open-account {
+    padding: 10px;
+    border: 2px solid rgb(252, 171, 105);
+    border-radius: 20px;
+    color: rgb(252 171, 105);
+}
+
+.logo {
+    color: black;
+    font-size: 20px;
+    font-weight: bolder;
 }
 
 .btn {
-    background: rgb(38, 235, 218);
-    border: none;
-    border-radius: 4px;
-    padding: 5px;
-    margin-top: 20px;
-    font-size: 18px;
-    box-shadow: 5px 5px 20px rgb(38, 235, 218);
+    width: 25px;
+    height: 25px;
+    display: none;
 }
 
-.hub-btn {
-    border: 2px solid rgb(38, 235, 218);
-    background: none;
-    color: white;
-    padding: 5px;
-    border-radius: 4px;
-    font-size: 17px;
-
-}
-
-#about {
-    padding: 80px 0;
-}
-
-.row {
+.section {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
 }
 
-.about-col-1 {
-    flex-basis: 35%;
+.col-1 {
+    flex-basis: 50%;
+    padding: 60px;
 }
 
-.about-col-1 img {
+.col-2 {
+    margin: 30px;
+}
+
+.col-1 h2 {
+    color: rgb(247, 180, 99);
+    font-size: 9vmin;
+    font-size: bold;
+    margin-bottom: 30px;
+}
+
+.col-1 p {
+    font-size: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-bottom: 30px;
+}
+
+.col-1 a {
+    padding: 10px;
+    border: 2px solid rgb(252, 171, 105);
+    border-radius: 20px;
+    color: rgb(252 171, 105);
+}
+
+.col-2 img {
     width: 100%;
-    border-radius: 15px;
+    height: 400px;
+    margin-right: 30px;
 }
 
-.about-col-2 {
-    flex-basis: 60%;
+.section .container img {
+    width: 40px;
+    align-items: center;
+    border-radius: 50% solid rgb(248, 215, 187);
+
 }
 
-.about-col-2 p {
-    font-size: 15px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-bottom: -15px;
+.section .container {
+    height: 500px;
+    margin: 50px;
+    box-shadow: 5px 5px 20px rgb(54, 54, 53);
+    border-radius: 5px;
+}
+
+.section .container img {
+    align-items: center;
+}
+
+.align {
+    text-align: center;
     padding: 20px;
+    padding-top: 100px;
 }
 
-.sub-title {
-    font-size: 60px;
-    font-weight: 600;
-    color: rgb(38, 235, 218);
-    margin-bottom: 50px;
+.heading {
+    color: rgb(247, 180, 99);
+    font-size: 9vmin;
+    font-size: bold;
+    margin-bottom: 10px;
+    margin-top: 30px;
+    margin-left: 30px;
 }
 
-.tab-titles {
-    display: flex;
-    margin: 20px 0 40px;
+.heading-text {
+    font-size: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-bottom: 30px;
+    margin-left: 40px;
+    margin-right: 40px
 }
 
-.tab-titles p {
-    font-size: 30px;
+.align h3 {
+    color: rgb(247, 180, 99);
+    font-size: 25px;
+    margin-top: 25px;
+    margin-bottom: 15px;
+}
+
+.align p {
+    font-size: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-bottom: 30px;
+}
+
+.align a {
+    padding: 10px;
+    background: rgb(247, 180, 99);
+    border-radius: 20px;
+    color: black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.sub-heading {
-    margin-right: 50px;
-    font-weight: 500;
-    cursor: pointer;
-    color: rgb(38, 235, 218);
+.careers {
+    margin-bottom: 30px;
 }
 
-.tab-contents ul li {
-    list-style: none;
-    margin: 10px 0;
-    line-height: 5px;
+.read-more {
+    margin-left: 40px;
+    padding: 10px;
+    background: rgb(247, 180, 99);
+    border-radius: 20px;
+    color: black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.content1 {
-    margin-left: 20px;
-    margin-top: -30px;
-}
-
-.content1 li {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.contact-left p {
-    margin-top: 0;
-
-}
-
-.contact-left h5 {
-    font-size: 30px;
-    margin-left: 10px;
-    margin-bottom: 10px;
-    color: rgb(38, 235, 218);
-}
-
-.contact-left .p{
-    font-size: 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-left: 12px;
-    margin-right: 10px;
-    margin-bottom: 20px;
-}
-
-.contact-left p img {
-    color: white;
-    margin-left: 15px;
-    font-size: 25px;
-    width: 18px;
-    margin-top: 1px;
-    margin-right: 5px;
-}
-
-.social-icons {
-    margin-top: 5px;
-}
-
-.social-icons a img {
-    text-decoration: none;
-    font-size: 30px;
-    color: white;
-    width: 32px;
-    margin-left: 15px;
-    margin-bottom: 50px;
-    border: 2px solid rgb(38, 235, 218);
-    border-radius: 50%;
-
-}
-
-.github {
-    border-radius: 50%;
-}
-
-.blog {
-    border-radius: 50%;
-}
-
-.copyright {
-    width: 100%;
+.last-message {
     text-align: center;
-    padding: 25px 0;
-    background: rgb(0, 0, 0);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-bottom: 50px;
+}
+
+.message {
+    color: rgb(247, 180, 99);
+    font-size: 9vmin;
+    font-size: bold;
+    margin-bottom: 30px;
+    margin-top: 100px;
+    margin-left: 30px;
+    text-align: center;
+}
+
+.line {
+    width: 100%;
+    background: rgb(247, 180, 99);
+    height: 2px;
+}
+
+.cards {
+    padding: 30px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.cards p {
+    font-size: 20px;
     margin-top: 20px;
-    color: white;
+}
+
+.cards h3 {
+    margin-bottom: 30px;
+}
+
+.apply {
+    padding: 10px;
+    background: rgb(247, 180, 99);
+    border-radius: 20px;
+    color: black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 15px;
+}
+    
+.learn-more {
+    font-size: 18px;
+    margin-bottom: 4;
+}
+
+.footer {
+    text-align: center;
+    margin-top: 50px;
     line-height: 50px;
 }
 
-#portfolio {
-    padding: 50px 0;
-}
-
-.work-list {
-    display: flex;
-    grid-template-columns: repeat(auto-fuit, mimax(250px, 1fr));
-    grid-gap: 40px;
-    margin-top: 50px;
-}
-
-.work {
-    border-radius: 10px;
-    position: relative;
-    overflow: hidden;
-}
-
-.work img {
-    width: 100%;
-    border-radius: 10px;
-    display: block;
-}
-
-.laya {
-    width: 100%;
-    height: 500px;
-    align-items: center;
-    box-shadow: 0px 0px 20px rgb(38, 235, 218);
-    padding: 20px;
-    border-radius: 5px;
-    margin: 50px;
-    margin-left: 0;
-    margin-right: 10px;
-    text-align: center;
-}
-
-.laya h4 {
-    font-size: 30px;
-    margin: 30px;
-    margin-top: 80px;
-    color: rgb(38, 235, 218);
-}
-
-.laya p {
-    margin: 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 18px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.laya img {
-    width: 100%;
-    height: 200px;
-    border-radius: 5px;
-}
-
-.projects {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
+.footer2 { 
+    background: black;
 }
 
 
-.layer h4 {
-    font-weight: 500;
-    margin-bottom: 20px;
-}
+    @media only screen and (max-width: 600px) {
+         
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 20px;
+            margin-bottom: 40px;
+            margin-left: 10px;
+            margin-right: 10px;
+        }
 
-.work:hover .layer {
-    height: 100%;
-}
+        nav ul {
+            background: rgb(255, 255, 255);
+            position: fixed;
+            top: 0;
+            right: -200px;
+            width: 200px;
+            height: 100vh;
+            padding-top: 50px;
+            z-index: 2;
+            transition: right 0.5s;
+        }
 
-.services {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
-}
+        nav ul li {
+            display: block;
+            margin: 25px;
+        }
 
+        .btn {
+            width: 25px;
+            height: 25px;
+            display: block;
+            border-radius: 5px;
+        }
 
+        nav ul .btn {
+            position: absolute;
+            top: 25px;
+            left: 25px;
+            cursor: pointer;
+        }
 
-@media only screen and (max-width: 600px) {
-   
-    .fas {
-        width: 30px;
-        display: block;
+        .col-1 {
+            flex-basis: 50%;
+            padding: 30px;
+        }
+
+        .section {
+            display: block;
+        }
+
+        .col-2 img {
+            width: 100%;
+            height: 190px;
+            margin-bottom: 30px;
+        }
+
+        .open-account {
+            padding: 5px;
+            border: 2px solid rgb(252, 171, 105);
+            border-radius: 20px;
+            color: rgb(252 171, 105);
+            margin-left: 0;
+        }
+
+        .heading-text {
+            font-size: 18px;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            margin-bottom: 30px;
+            margin-left: 40px;
+            text-align: left;
+        }
+
+        .align {
+            text-align: center;
+            padding: 20px;
+            padding-top: 100px;
+        }
     }
-    
-    nav ul {
-        background: rgb(31, 31, 31);
-        position: fixed;
-        top: 0;
-        right: -200px;
-        width: 200px;
-        height: 100vh;
-        padding-top: 50px;
-        z-index: 2;
-        transition: right 0.5s;
-    }
-
-    nav ul li {
-        display: block;
-        margin: 25px;
-    }
-
-    nav ul .fas {
-        position: absolute;
-        top: 25px;
-        left: 25px;
-        cursor: pointer;
-    }
-
-    .sub-title {
-        font-size: 40px;
-    }
-
-    .about-col-1, .about-col-2 {
-        flex-basis: 100%;
-    }
-
-    .about-col-2 {
-        font-size: 14px;
-    }
-
-    .work-list {
-        display: grid;
-        padding: 20px;
-    }
-     
-    .services {
-        display: block;
-    }
-
-    .laya img {
-        width: 100%;
-        height: 130px;
-        border-radius: 5px;
-    }
-}
